--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,8 +47,10 @@
     <div id="resultPage" class="container hidden">
         <h2>Quiz Completed!</h2>
         <p id="scoreMessage"></p>
+        <div id="resultDetails"></div> 
         <button onclick="restartQuiz()">Try Again</button>
     </div>
+    
 
     <script src="script.js"></script>
 </body>
